--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.aggrepoint.framework</groupId>
 		<artifactId>pom-parent</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>1.0.1</version>
 		<relativePath>../pom_parent.xml</relativePath>
 	</parent>
 
@@ -15,7 +15,7 @@
 	<description>Common utilities used by both Dao and Winlet project</description>
 
 	<properties>
-		<jackson-version>2.9.5</jackson-version>
+		<jackson-version>2.9.8</jackson-version>
 		<imgscalr-version>4.2</imgscalr-version>
 	</properties>
 
